--- a/index.html
+++ b/index.html
@@ -135,5 +135,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  <!-- RetinaJS -->
+  <script type="text/javascript" src="/scripts/retina.min.js"></script>
 </body>
 </html>
