Add bit.ly links to meta tags

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <meta name="twitter:site" content="@_Alternity">
   <meta name="twitter:creator" content="@cedricpelvet">
   <meta name="twitter:title" content="Alternity">
-  <meta name="twitter:description" content="Alternity enables you to add virtual screens to your computer using augmented reality glasses. ### BIT.LY URL ###">
+  <meta name="twitter:description" content="Alternity enables you to add virtual screens to your computer using augmented reality glasses. bit.ly/1dtfwz5">
   <meta name="twitter:image" content="http://www.alternity.co/images/twitter-card.jpg">
 
   <meta property="og:title" content="Alternity">
   <meta property="og:url" content="http://www.alternity.co/">
-  <meta property="og:description" content="lternity enables you to add virtual screens to your computer using augmented reality glasses. ### BIT.LY URL ###">
+  <meta property="og:description" content="lternity enables you to add virtual screens to your computer using augmented reality glasses. bit.ly/1dtfwz5">
   <meta property="og:site_name" content="Alternity">
   <meta property="og:image" content="http://www.alternity.co/images/twitter-card.jpg">
 
