Correct typo in og:description meta tag

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <!-- Twitter card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@_Alternity">
-  <meta name="twitter:creator" content="@cedricpelvet">
+  <!--<meta name="twitter:creator" content="@cedricpelvet">-->
   <meta name="twitter:title" content="Alternity">
   <meta name="twitter:description" content="Alternity enables you to add virtual screens to your computer using augmented reality glasses.">
   <meta name="twitter:image" content="http://www.alternity.co/images/twitter-card.jpg">
 
   <meta property="og:title" content="Alternity">
   <meta property="og:url" content="http://www.alternity.co/">
-  <meta property="og:description" content="lternity enables you to add virtual screens to your computer using augmented reality glasses.">
+  <meta property="og:description" content="Alternity enables you to add virtual screens to your computer using augmented reality glasses.">
   <meta property="og:site_name" content="Alternity">
   <meta property="og:image" content="http://www.alternity.co/images/twitter-card.jpg">
 
