--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
   <!-- Twitter card -->
   <meta name="twitter:card" content="summary_large_image">
@@ -13,14 +14,13 @@
   <meta name="twitter:description" content="Alternity enables you to add virtual screens to your computer using augmented reality glasses.">
   <meta name="twitter:image" content="http://www.alternity.co/images/twitter-card.jpg">
 
+  <!-- Open Graph -->
   <meta property="og:title" content="Alternity">
   <meta property="og:url" content="http://www.alternity.co/">
   <meta property="og:description" content="Alternity enables you to add virtual screens to your computer using augmented reality glasses.">
   <meta property="og:site_name" content="Alternity">
   <meta property="og:image" content="http://www.alternity.co/images/twitter-card.jpg">
 
-
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <title>Alternity</title>
 
   <link rel="icon" type="image/png" href="images/favicon.png" />
