--- a/index.html
+++ b/index.html
@@ -61,10 +61,13 @@
 <!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+<script>
+  document.createElement('video');
+</script>
 <![endif]-->
 </head>
 <body>
-  <video autoplay loop poster="images/splash_bg.jpg">
+  <video autoplay loop poster="images/splash_bg.jpg" id="bgvid">
     <source src="images/splash_bg.mp4" type="video/mp4">
   </video>
 
