Add gif alternative on small devices

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 <body>
   <video autoplay loop poster="images/splash_bg.jpg" id="bgvid">
     <source src="images/splash_bg.mp4" type="video/mp4">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/mOQYOQBCfF0" frameborder="0" allowfullscreen></iframe>
   </video>
 
   <div class="container">
@@ -77,7 +78,8 @@
       <div class="response alert alert-success" id="mce-success-response" style="display:none"></div>
     </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 
-    <h1>All your screens, anywhere.</h1>
+    <h1>All your screens, anywhere</h1>
+    <p class="subtitle">With augmented reality glasses</p>
   </div>
 
   <div class="container cta">
