--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
       <div class="response alert alert-success" id="mce-success-response" style="display:none"></div>
     </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 
-    <h1>All your screens, anywhere</h1>
-    <p class="subtitle">With augmented reality glasses</p>
+    <h1>Add virtual screens, anywhere</h1>
+    <p class="subtitle">Using augmented reality glasses</p>
   </div>
 
   <div class="container cta">
