--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <body>
   <video autoplay loop poster="images/splash_bg.jpg" id="bgvid">
     <source src="images/splash_bg.mp4" type="video/mp4">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/mOQYOQBCfF0" frameborder="0" allowfullscreen></iframe>
+    <!--<iframe width="560" height="315" src="https://www.youtube.com/embed/mOQYOQBCfF0" frameborder="0" allowfullscreen></iframe>-->
   </video>
 
   <div class="container">
