Added more OpenGraph metadata

--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
   <meta name="twitter:image" content="http://www.alternity.co/images/twitter-card.jpg">
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Alternity">
-  <meta property="og:url" content="http://www.alternity.co/">
-  <meta property="og:description" content="Alternity enables you to add virtual screens to your computer using augmented reality glasses.">
-  <meta property="og:site_name" content="Alternity">
-  <meta property="og:image" content="http://www.alternity.co/images/twitter-card.jpg">
+  <meta property="og:title" content="Alternity" />
+  <meta property="og:url" content="http://www.alternity.co/" />
+  <meta property="og:description" content="Alternity enables you to add virtual screens to your computer using augmented reality glasses." />
+  <meta property="og:site_name" content="Alternity" />
+  <meta property="og:image" content="http://www.alternity.co/images/twitter-card.jpg" />
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:type" content="website" />
 
   <title>Alternity</title>
 
